<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textTitleAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:text="@string/text_add_activity"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:ems="10"
        android:inputType="date"
        android:text="@string/text_date"
        android:hint="@string/text_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitleAdd"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="211dp"
        android:layout_height="32dp"
        android:layout_marginTop="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDate" />

    <EditText
        android:id="@+id/editOtherActivityInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:ems="10"
        android:importantForAutofill="no"
        android:hint="@string/text_other"
        android:inputType="textPersonName"
        android:text="@string/text_other_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <EditText
        android:id="@+id/editTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="time"
        android:hint="@string/text_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editOtherActivityInput" />

    <EditText
        android:id="@+id/editDistance"
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:layout_marginTop="12sp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/editTime"
        app:layout_constraintTop_toBottomOf="@+id/editTime"
        android:hint="@string/text_1_0" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchKmMi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_km"
        app:layout_constraintBottom_toBottomOf="@+id/editDistance"
        app:layout_constraintEnd_toEndOf="@+id/editTime"
        app:layout_constraintTop_toTopOf="@+id/editDistance" />

    <SeekBar
        android:id="@+id/seekBarFeel"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="232dp"
        android:layout_height="40dp"
        android:max="4"
        android:progress="3"
        app:layout_constraintEnd_toEndOf="@+id/switchKmMi"
        app:layout_constraintStart_toStartOf="@+id/editDistance"
        app:layout_constraintTop_toBottomOf="@+id/textViewFeel" />

    <TextView
        android:id="@+id/textViewFeel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:text="@string/text_feel_bad_to_good"
        app:layout_constraintStart_toStartOf="@+id/editDistance"
        app:layout_constraintTop_toBottomOf="@+id/editDistance" />

    <EditText
        android:id="@+id/editLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:ems="10"
        android:hint="@string/text_kew"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/text_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarFeel" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/text_comments"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editLocation" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:text="@string/text_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

</androidx.constraintlayout.widget.ConstraintLayout>