<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textActivityType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_activity_type" />

        <TextView
            android:id="@+id/textDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_date_01_01_20" />
    </LinearLayout>

    <TextView
        android:id="@+id/textLocation"
        android:layout_width="184dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/text_location" />

    <Button
        android:id="@+id/buttonView"
        android:layout_width="154sp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="View" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="154sp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="Delete" />

</LinearLayout>